 * Permit the syntax and synopsis fields of the corresponding dialplan
   functions to be individually set from func_odbc.conf.
 * Added debugging CLI functions to func_odbc, 'odbc read' and 'odbc write'.
 * func_odbc now may specify an insert query to execute, when the write query
   affects 0 rows (usually indicating that no such row exists).

Applications
------------
 * Scheduled meetme conferences may now have their end times extended by
   using MeetMeAdmin.
 * app_authenticate now gives the ability to select a prompt other than
   the default.
 * app_directory now pays attention to the searchcontexts setting in
   voicemail.conf and will look through all contexts, if no context is
   specified in the initial argument.

Miscellaneous
-------------
 * res_jabber: autoprune has been disabled by default, to avoid misconfiguration 
   that would end up being interpreted as a bug once Asterisk started removing 
   the contacts from a user list.
 * extensions.conf now allows you to use keyword "same" to define an extension
   without actually specifying an extension.  It uses exactly the same pattern
   as previously used on the last "exten" line.  For example:
     exten => 123,1,NoOp(something)
     same  =>     n,SomethingElse()
 * musiconhold.conf classes of type 'files' can now use relative directory paths,
   which are interpreted as relative to the astvarlibdir setting in asterisk.conf.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.0 to Asterisk 1.6.1  -------------
------------------------------------------------------------------------------

Device State Handling
---------------------
 * The event infrastructure in Asterisk got another big update to help support
    distributed events.  It currently supports distributed device state and
    distributed Voicemail MWI (Message Waiting Indication).  A new module has